--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Odin Project YouTube</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header>
+        <div class="burgerLogo">
+            <div class="burger">   
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class= "logo">
+                <img id="logo" src="youtube.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
