adds ul for logo and icon

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <div class="burgerLogo">
-            <div class="burger">   
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </div>
-            <div class= "logo">
-                <img id="logo" src="youtube.png" alt="">
-            </div>
-        </div>
+               <ul class="topMenu">
+                    <li class="textLink">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </li>
+                    <li class="logo">
+                        <img id="logo" src="youtube.png" alt="">
+                    </li>
+                </ul>
     </header>
 </body>
 </html>
