adds search bar and styling

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
     <header>
                <ul class="topMenu">
-                    <li class="textLink">
+                    <li class="clear">
                         <i class="fa fa-bars" aria-hidden="true"></i>
                     </li>
-                    <li class="logo">
+                    <li class="clear">
                         <img id="logo" src="youtube.png" alt="">
                     </li>
                 </ul>
+
+                <div> 
+                    <input type="text" text="search">
+                </div>
     </header>
 </body>
 </html>
