adds placeholder and hover class to input

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
                 </ul>
 
                 <div> 
-                    <input type="text" text="search">
+                    <input type="text" text="search" placeholder="Search">
+                    <i class="fa fa-search" aria-hidden="true"></i>
                 </div>
+
     </header>
 </body>
 </html>
